# pupil-questions

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  test.py
backend/: .env.example  Dockerfile
backend/apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/templates/accounts/: account.html  login.html  register.html
backend/apps/common/: admin.py  apps.py  converters.py  models.py
backend/apps/common/templates/components/: alert.html  base.html  layout.html  menu.html  nav_link.html
backend/apps/common/templatetags/: date_utils.py  icons.py  markdown.py  menu.py
backend/apps/dashboard/: views.py
backend/apps/dashboard/templates/dashboard/: dashboard.html
backend/apps/questions/: admin.py  context_processors.py  forms.py  models.py  service.py  tasks.py  urls.py  views.py
backend/apps/questions/migrations/: 0001_initial.py  0002_practicesession_practiceanswer.py  0002_questionset_pinned_at.py  0002_remove_practicesession_user.py
backend/apps/questions/templates/questions/: add_question_set.html  practice.html  practice_results.html  practices.html  question_set.html  question_sets.html
backend/apps/questions/templatetags/: index_letter.py
backend/apps/users/: admin.py  apps.py  models.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/templates/users/: login.html
backend/core/: auth.py  celery.py  settings.py  urls.py  wsgi.py
backend/static/css/: bootstrap.min.css  pygments.css  style.css
backend/static/js/: password-toggle.js  sidebar.js  theme.js
migrations/models/: 0_20250803184202_init.py  0_20250813112027_init.py
pupil_questions/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.py  deps.py  enums.py  flash.py  security.py  settings.py  style.scss  templates.py
src/apps/users/: models.py
src/apps/users/migrations/: 0001_initial.py
src/core/: settings.py  urls.py  wsgi.py
src/database/: config.py  models.py
src/services/: questions.py
src/static/: style.css  style.css.map
src/templates/: account.html.jinja  edit_topic.html.jinja  home.html.jinja  login.html.jinja  register.html.jinja  todos.html.jinja  topic.html.jinja  topics.html.jinja
src/templates/components/: alert.html.jinja  layout.html.jinja
src/templates/macros/: icon.html.jinja  tooltip.html.jinja
src/views/: account.py  auth.py  home.py  todo.py  topics.py
users/: admin.py
