[project]
name = "pupil-questions"
version = "0.1.0"
description = "Questions with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-ipware>=7.0.1",
    "markdown>=3.9",
]


[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pyright]
typeCheckingMode = "standard"
# UnannotatedClassAttribute = false

[dependency-groups]
dev = ["basedpyright>=1.31.0", "django-stubs>=5.2.5"]
